--- a/Nodes/Translations/Translations.yaml
+++ b/Nodes/Translations/Translations.yaml
@@ -1,2 +1,17 @@
 Name: Translations
 Type: FolderType
+Children:
+- Name: LocalizationDictionary1
+  Type: LocalizationDictionary
+  DataType: String
+  ValueRank: OneOrMoreDimensions
+  ArrayDimensions: [0,0]
+  Value: 
+   {
+    "Type": 12,
+    "Dimensions": [2,3],
+    "Body": [
+     "Key","en-US","es-ES",
+     "US","English","Americano muy largosdfds "
+    ]
+   }
